--- a/Basiru_Mbye_008_AI_and_Data_Science.ipynb
+++ b/Basiru_Mbye_008_AI_and_Data_Science.ipynb
@@ -73,7 +73,7 @@
     "    if i >= 50:\n",
     "        new_list.append(\"Pass\")\n",
     "    else:\n",
-    "        new_list.append(\"Fail\")ma\n",
+    "        new_list.append(\"Fail\")\n",
     "print(new_list)"
    ]
   },
